SONAR-24046 Add telemetry 'aicaQualified' for a Quality Gate